--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Tungsten # the main title
 tagline: tungsten106的个人主页 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  一个兴趣使然的转码选手
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -51,7 +51,7 @@ google_site_verification: # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-HE00DRX2ML# fill in your Google Analytics ID
 
 # Prefer color scheme setting.
 #
