--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ paginate: 10
 baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
-
+markdown: kramdown
 kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
@@ -127,6 +127,9 @@ kramdown:
     block:
       line_numbers: true
       start_line: 1
+
+# mathjax: 
+#         enable: true
 
 collections:
   tabs:
